Refactor node creation input and update UI for title entry

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             <button data-category="Root Emotions" class="node-type-btn">Root Emotions</button>
         </div>
         <div id="node-creation-controls">
-            <input type="text" id="node-notes" placeholder="Enter notes for the node...">
+            <input type="text" id="node-title-input" placeholder="Enter Title for the node...">
             <button id="add-node-btn" disabled>Add Node</button>
         </div>
     </div>
 
+    
     <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/controls/OrbitControls.js"></script>
     <script src="script.js"></script>
