Update node type categories and improve geometry selection for nodes

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div id="node-creation">
         <div id="node-type-selection">
             <button data-category="Trigger" class="node-type-btn">Trigger</button>
-            <button data-category="Thoughts" class="node-type-btn">Thoughts</button>
+            <button data-category="Event/Thought" class="node-type-btn">Event/Thought</button>
             <button data-category="Theme" class="node-type-btn">Theme</button>
             <button data-category="Feeling" class="node-type-btn">Feeling</button>
             <button data-category="Whys" class="node-type-btn">Whys</button>
             <button data-category="Solutions" class="node-type-btn">Solutions</button>
-            <button data-category="Root Emotions" class="node-type-btn">Root Emotions</button>
+            <button data-category="Raw Emotion" class="node-type-btn">Raw Emotion</button>
         </div>
         <div id="node-creation-controls">
             <input type="text" id="node-title-input" placeholder="Enter Title for the node...">
