Update node categories and add geometry handling for Evidence and Questions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <button data-category="Event/Thought" class="node-type-btn">Event/Thought</button>
             <button data-category="Theme" class="node-type-btn">Theme</button>
             <button data-category="Feeling" class="node-type-btn">Feeling</button>
-            <button data-category="Whys" class="node-type-btn">Whys</button>
+            <button data-category="Questions" class="node-type-btn">Questions</button>
+            <button data-category="Evidence" class="node-type-btn">Evidence</button>
             <button data-category="Solutions" class="node-type-btn">Solutions</button>
             <button data-category="Raw Emotion" class="node-type-btn">Raw Emotion</button>
         </div>
